Fix font location in dark mode (#14)
* Make library titles proper links

* Make... fonts not 404?

--- a/static/webix/skins/contrastshop.css
+++ b/static/webix/skins/contrastshop.css
@@ -11443,13 +11443,13 @@ body.webix_print {
 }
 @font-face {
   font-family: Roboto;
-  src: url('./fonts/Roboto-Regular-webfont.woff2') format('woff2'), url('./fonts/Roboto-Regular-webfont.woff') format('woff');
+  src: url('../fonts/Roboto-Regular-webfont.woff2') format('woff2'), url('../fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: Roboto;
-  src: url('./fonts/Roboto-Medium-webfont.woff2') format('woff2'), url('./fonts/Roboto-Medium-webfont.woff') format('woff');
+  src: url('../fonts/Roboto-Medium-webfont.woff2') format('woff2'), url('../fonts/Roboto-Medium-webfont.woff') format('woff');
   font-style: normal;
   font-weight: 500;
 }
@@ -13744,7 +13744,7 @@ textarea.webix_invalid {
 /* based on MaterialDesignIcons.com */
 @font-face {
   font-family: "Webix Material Icons";
-  src: url('./fonts/webixmdi-webfont.woff2') format('woff2'), url('./fonts/webixmdi-webfont.woff') format('woff');
+  src: url('../fonts/webixmdi-webfont.woff2') format('woff2'), url('../fonts/webixmdi-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
